Adding biome info command

--- a/src/main/resources/assets/biometweaker/lang/en_US.lang
+++ b/src/main/resources/assets/biometweaker/lang/en_US.lang
@@ -1,4 +1,8 @@
 biometweaker.cfg.reload.tooltip=Press to reload BiomeTweaker configuration and scripts.
 biometweaker.msg.reload.usage.text=Takes no arguments. Simply run '/btr'
+biometweaker.msg.info.usage.text=Takes no arguments. Simply run '/bti'
+biometweaker.msg.info.output.text=Biome Status Report:
 biometweaker.msg.reload.success.text=Successfully reloaded scripts!
 biometweaker.msg.reload.failure.text=An error occurred while reloading scripts. Please check the log.
+biometweaker.msg.info.failure.text=An error occurred while retrieving biome info. Please check the log.
+biometweaker.msg.info.invalsender.text=Invalid command sender. Sender must have a position in a world!
