--- a/src/main/resources/assets/biometweaker/lang/en_US.lang
+++ b/src/main/resources/assets/biometweaker/lang/en_US.lang
@@ -1,5 +1,9 @@
 biometweaker.cfg.reload.tooltip=Press to reload BiomeTweaker configuration and scripts.
 biometweaker.msg.reload.usage.text=Takes no arguments. Simply run '/btr'
+biometweaker.msg.reloadscript.usage.text=Usage: '/btrs (script file)'
+biometweaker.msg.reloadscript.nofile.text=Script %s was not found. Did you misspell it?
+biometweaker.msg.reloadscript.success.text=Successfully reloaded script %s!
+biometweaker.msg.reloadscript.failure.text=An error occurred while reloading script %s. Some tweaks may have been applied. Please check the log.
 biometweaker.msg.info.usage.text=Takes no arguments. Simply run '/bti'
 biometweaker.msg.output.usage.text=Takes no arguments. Simply run '/bto'
 biometweaker.msg.info.output.text=Biome Status Report:
